objects/Booking_History__c.object
<CustomObject>
    <fields>
        <fullName>Booking_History_Id__c</fullName>
        <externalId>true</externalId>
        <label>Booking History Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Booking History Records</relationshipLabel>
        <relationshipName>Booking_History_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Centre__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Call Centre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Details__c</fullName>
        <label>Change Details</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Collection_Comments__c</fullName>
        <label>Collection Comments</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>Copies the Created Date/Time from the system field for reporting use.</description>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Hour__c</fullName>
        <description>Calculates the Hour that the record was created in and can be used in reports</description>
        <formula>IF ( DATEVALUE( Created_Date_Time__c ) &gt;=
DATE ( YEAR (DATEVALUE(Created_Date_Time__c )),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time__c )),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time__c )),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(Created_Date_Time__c ) &lt;
DATE ( YEAR (DATEVALUE(Created_Date_Time__c )),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time__c )),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time__c )),11,1) - DATE (1900,1,7),7))
),
VALUE (MID ( TEXT (Created_Date_Time__c + 1/24 ), 12, 2)),
VALUE (MID ( TEXT (Created_Date_Time__c + 0/24), 12, 2))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depot</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Booking History Records</relationshipLabel>
        <relationshipName>Booking_History_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Movement_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Movement Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Movement_Round__c</fullName>
        <label>Movement Round</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Movement_Sub_Type__c</fullName>
        <label>Movement Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>TBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Movement_Type__c</fullName>
        <label>Movement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted By Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocated To Collection Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment Raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Matched To Consignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Request Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Request Amended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Request Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Request Raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dangerous Goods Amended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dangerous Goods Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generated By Upload Proc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Auto Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manually Matched To Con</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Collected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orphan Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed To Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received By Pdt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected By Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected To Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed From Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Shipper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <defaultValue>$User.Username</defaultValue>
        <label>User Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Booking History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Booking History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking History Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>